<resources>
    <string name="app_name">Cocina Conmigo</string>

    <string name="xex">Texto de ejemplo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom">MainActivity</string>

    <string name="title_home">inicio</string>
    <string name="title_search">explorar</string>
    <string name="title_saved">guardados</string>
    <string name="title_history">historial</string>
    <string name="title_account">mi cuenta</string>

    <string name="keywords">Palabras clave</string>
    <string name="ings">Ingredientes</string>
    <string name="diff">Dificultad</string>
    <string name="maxtime">Tiempo máximo</string>
    <string name="comma">(Separado por comas)</string>
    <string name="min">(min)</string>
    <string name="veg">Vegano</string>
    <string name="cel">Sin gluten</string>
    <string name="search">Buscar</string>

    <string name="recipeName">Nombre de la receta</string>
    <string name="addphoto">Añadir Imagen</string>
    <string name="ing">ingrediente</string>
    <string name="adding">añadir ingrediente</string>
    <string name="time">Tiempo de preparación</string>
    <string name="pe">Número de personas</string>
    <string name="share">Compartir</string>
    <string name="del">Eliminar</string>
    <string name="logoff">cerrar sesión</string>


    <string name="editProfile">Editar foto de perfil</string>
    <string name="drafts">Mis borradores</string>
    <string name="vinc">Vincular cuenta</string>
    <string name="fb">Vincular con Facebook</string>
    <string name="tw">Vincular con Twitter</string>
    <string name="ig">Vincular con Instagram</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Registrarse</string>
    <string name="notlogged">No has iniciado sesión</string>
    <string name="results">Resultados que coinciden con<br /> la búsqueda:</string>
    <string name="ps"> personas</string>
    <string name="mn"> min</string>
    <string name="savetodrafts">Añadir a borradores</string>
    <string name="addrecipe">Subir receta</string>
    <string name="people">Número de personas</string>


    <string name="rate">valorar</string>
    <string name="remember">recordar contraseña</string>
    <string name="email">email o nombre de usuario</string>
    <string name="passwd">contraseña</string>
    <string name="googlelogin">Iniciar sesión con Google</string>
    <string name="upload">Subir</string>
    <string name="recipes">Recetas</string>
    <string name="sort">Ordenar por:</string>
    <string name="pop">Popularidad</string>
    <string name="rat">Valoración</string>
    <string name="time2">Tiempo</string>

    <string name="recipe">Receta</string>
    <string name="ratethis">Valora esta receta</string>
    <string name="Rating">Valorar</string>
    <string name="bookmark">Recetas guardadas</string>
    <string name="history">Últimas recetas vistas</string>
    <string name="more">Más opciones</string>


    <string name="steps">Pasos a seguir</string>
    <string name="step">pasos a seguir</string>
    <string name="op">Receta de </string>
    <string name="no">No</string>
    <string name="logout">Cerrar sesión</string>
    <string name="trending">Popular ahora mismo</string>

    <string name="my">Mis recetas</string>
    <string name="protip">consejo</string>
    <string name="protips">Consejos</string>
    <string name="addtip">Añadir consejo</string>

    <string name="mins">(min)</string>
    <string name="logout2">¿Seguro que quieres cerrar sesión?</string>
    <string name="delete">¿Seguro de que quieres eliminar esta receta?</string>

    <string name="rateRecipe">Valora esta receta</string>
    <string name="toRate">Valorar</string>
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->




</resources>