<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userinfo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ImageView
            android:id="@+id/userPic"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:background="@drawable/ic_baseline_account"
            android:contentDescription="@string/xex"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/textStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:id="@+id/userfullname"
            app:layout_constraintLeft_toRightOf="@id/userPic"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Naomi Hidalgo"/>


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@id/userPic"
            app:layout_constraintTop_toBottomOf="@id/userfullname"
            android:text="\@nhid7597"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="10dp"

            android:textSize="14sp"
            android:textColor="#1A8F88"
            app:layout_constraintLeft_toRightOf="@id/userPic"
            app:layout_constraintTop_toBottomOf="@id/username"
            android:text="@string/logoff" />

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="18dp"
            app:layout_constraintLeft_toRightOf="@id/userfullname"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/edit"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/editPhoto"
        android:background="@drawable/ic_button2"
        style="@style/rectangle"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userinfo"
        android:text="@string/editProfile"
        />

    <TextView
        android:id="@+id/gotoDrafts"
        android:background="@drawable/ic_button2"
        style="@style/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPhoto"
        android:text="@string/drafts"

        />

    <TextView
        android:id="@+id/myRecipes"
        android:background="@drawable/ic_button2"
        style="@style/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gotoDrafts"
        android:text="@string/my"
        />

    <TextView
        android:id="@+id/title"
        style="@style/textStyle"
        android:text="@string/vinc"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/myRecipes" />

    <TextView
        android:id="@+id/facebook"
        android:background="@drawable/ic_button2"
        style="@style/rectangle"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/fb"
        />

    <TextView
        android:id="@+id/twitter"
        android:background="@drawable/ic_button2"
        style="@style/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook"
        android:text="@string/tw"
        />

    <TextView
        android:id="@+id/instagram"
        android:background="@drawable/ic_button2"
        style="@style/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/twitter"
        android:text="@string/ig"
        />

</androidx.constraintlayout.widget.ConstraintLayout>