<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="305dp"
    android:layout_height="175dp"
    android:background="@color/white"
    android:padding="20dp"
    android:orientation="vertical"
    android:elevation="20dp"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="102dp"
            android:id="@+id/no"
            android:layout_margin="10dp"
            android:layout_height="40dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="#1A8F88"/>

        <Button
            android:layout_width="102dp"
            android:layout_margin="10dp"
            android:layout_height="40dp"
            android:text="@string/del"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="#1A8F88"/>


    </LinearLayout>

</LinearLayout>