<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/xex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/share"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/ic_share"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:paddingTop="30dp"
        android:textColor="#4A4A4A"
        android:text="@string/share"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/delete"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/ic_delete"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:paddingTop="30dp"
        android:textColor="#4A4A4A"
        android:text="@string/del"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>