<?xml version="1.0" encoding="utf-8"?>

<com.factor.bouncy.BouncyNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:recyclerview_fling_animation_size=".7"
    app:recyclerview_overscroll_animation_size=".7"
    app:allow_item_swipe="false"
    android:paddingBottom="20dp"
    app:allow_drag_reorder="true"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content" android:layout_width="match_parent">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecetaFragment">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/xex" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xex"
        android:id="@+id/nombrereceta"
        android:textSize="35dp"
        android:layout_margin="25dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/sharebutton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/share_icon"
        app:layout_constraintEnd_toStartOf="@id/bookmark"
        app:layout_constraintTop_toTopOf="@id/imageView4" />

    <ImageView
        android:id="@+id/bookmark"
        android:layout_margin="10dp"
        android:background="@drawable/bookmark_border"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@id/imageView4" />

    <per.wsj.library.AndRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="200dp"
        android:rating="3.5"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:numStars="5"
        app:bgDrawable="@drawable/corazonoff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:starDrawable="@drawable/corazonon" />

    <TextView
        android:id="@+id/valorar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="29dp"
        android:text="@string/rate"
        android:textColor="@color/teal_700"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/ratingBar"
        app:layout_constraintTop_toBottomOf="@id/imageView4" />

    <ImageView
        android:id="@+id/vegcel"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/valorar"
        app:layout_constraintTop_toBottomOf="@id/imageView4" />

    <View
        android:id="@+id/viewcrono"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/ic_cronotimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:text="75 minutos"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/viewcrono"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <ImageView
        android:id="@+id/people"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_person"
        app:layout_constraintStart_toEndOf="@+id/minutes"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        android:contentDescription="@string/xex" />

    <TextView
        android:id="@+id/numofpeople"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:text="4 personas"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/people"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewcrono">

        <TextView
            android:id="@+id/dificultadtext"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/diff"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <per.wsj.library.AndRatingBar
            app:bgDrawable="@drawable/ic_ollaoff"
            app:starDrawable="@drawable/ic_ollaon"
            android:layout_width="220dp"
            android:layout_height="32dp"
            android:rating="2"
            android:id="@+id/ratingBar2"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:numStars="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/dificultadtext"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/ingtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ings"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/ingredientList"
        android:layout_width="match_parent"
        android:text="@string/xex"
        style="@style/textStyle"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingtext">

<!--        ingredientes-->

    </TextView>

    <TextView
        android:id="@+id/stepstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientList" />

    <TextView
        android:id="@+id/stepsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/textStyle"
        android:text="@string/xex"
        android:layout_margin="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stepstext">

        <!--        ingredientes-->

    </TextView>

    <View
        android:id="@+id/minipic"
        android:layout_width="19dp"
        android:layout_height="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stepsList" />

    <TextView
        android:id="@+id/recetade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toEndOf="@id/minipic"
        app:layout_constraintTop_toBottomOf="@id/stepsList"
        android:text="@string/op"/>

    <TextView
        android:id="@+id/gotouser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:text="\@usuario"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@id/recetade"
        app:layout_constraintTop_toBottomOf="@id/stepsList"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gotouser" />


</androidx.constraintlayout.widget.ConstraintLayout>

</com.factor.bouncy.BouncyNestedScrollView>