<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTextPersonName"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/keywords"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/cuadrito"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="   "
        android:background="@drawable/ic_textbar"
        android:strokeColor="#D6D6D6"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingredient"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/cuadrito"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/ing"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/commas"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toRightOf="@+id/ingredient"
        app:layout_constraintBottom_toTopOf="@id/cuadrito2"
        app:layout_constraintTop_toBottomOf="@id/cuadrito"
        android:text="@string/xex"
        android:textColor="#A5A5A5"
        android:textSize="13sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:id="@+id/cuadrito2"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="   "
        android:background="@drawable/ic_textbar"
        android:strokeColor="#D6D6D6"
        app:layout_constraintTop_toBottomOf="@id/ingredient"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/diff"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/cuadrito2"
        android:text="@string/xex"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:numStars="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diff" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/xex"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        tools:layout_editor_absoluteX="18dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time">

        <View
            android:id="@+id/view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/ic_cronotimer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/xex"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/view"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:text="@string/xex"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        tools:layout_editor_absoluteX="18dp" />

    <CheckBox
        android:id="@+id/checkBoxVegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="30dp"
        android:text="@string/xex"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <CheckBox
        android:id="@+id/checkBoxGluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="13dp"
        android:text="@string/xex"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxVegan" />

    <Button
        android:id="@+id/searchButton"
        android:elevation="5dp"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_button2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/xex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxGluten" />


</androidx.constraintlayout.widget.ConstraintLayout>